# todocs

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  goal.yaml  project.sh  pyproject.toml  pyqual.yaml  test-readme.md
docs/: CONTRIBUTING.md  README.md  api-changelog.md  api.md  architecture.md  configuration.md  coverage.md  dependency-graph.md  getting-started.md  modules.md
docs/examples/: advanced_usage.py  quickstart.py
examples/: api_surface_deep.py  article_sections_demo.py  custom_analysis.py  organization_health_report.py  scan_org.py  scan_single.py
project/: README.md  analysis.toon  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  project.toon  project.toon.yaml  project.yaml  prompt.txt  refactoring-plan.md  validation.toon.yaml
tests/: conftest.py  test_analyzers.py  test_cli_e2e.py  test_extractors.py  test_formatters_outputs.py  test_integration.py  test_new_cli.py  test_new_generators.py  test_todocs.py
todocs/: CONTRIBUTING.md  README.md  __init__.py  cli.py  core.py
todocs/analyzers/: __init__.py  api_surface.py  code_metrics.py  dependencies.py  import_graph.py  maturity.py  structure.py  utils.py
todocs/cli/: __init__.py  __main__.py  commands.py  progress.py  utils.py
todocs/extractors/: __init__.py  changelog_parser.py  docker_parser.py  makefile_parser.py  metadata.py  readme_parser.py  toon_parser.py
todocs/formatters/: __init__.py  table_formatter.py
(+28 files in other folders)
